mdapipkg/objects/Review__c/fields/Interview_result__c.field-meta.xml
<CustomField>
    <fullName>Interview_result__c</fullName>
    <inlineHelpText>Interview evaluation in points 0-10</inlineHelpText>
    <label>Interview result</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>