mdapipkg/objects/Review__c/fields/Interview_Type__c.field-meta.xml
<CustomField>
    <fullName>Interview_Type__c</fullName>
    <label>Interview Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Personal interview</fullName>
                <default>true</default>
                <label>Personal interview</label>
            </value>
            <value>
                <fullName>Technical interview</fullName>
            </value>
            <value>
                <fullName>English interview</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>