mdapipkg/objects/Review__c/fields/JobApp__c.field-meta.xml
<CustomField>
    <fullName>JobApp__c</fullName>
    <label>JobApp</label>
    <referenceTo>JobApp__c</referenceTo>
    <relationshipLabel>Reviews</relationshipLabel>
    <relationshipName>Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>